@@ -1,18 +1,21 @@
 package com.example;
 
+import com.example.utils.DBUtil;
 import javafx.application.Application;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Parent;
 import javafx.scene.Scene;
-import javafx.scene.control.Button;
 import javafx.stage.Stage;
 
 import java.io.IOException;
+import java.sql.Connection;
+import java.sql.ResultSet;
+import java.util.Objects;
 
 /**
  * EmployeeInformationManagementSystem
  *
- * @author PlutoCtx 15905898514@163.com
+ * @author PlutoCtx ctx195467@163.com
  * @version 2024/1/4 10:00
  * @since JDK17
  */
@@ -32,7 +35,8 @@ public class Main extends Application{
     public static void changeView(String fxml) {
         Parent root = null;
         try {
-            root = FXMLLoader.load(Main.class.getResource(fxml));
+//            root = FXMLLoader.load(Main.class.getResource(fxml));
+            root = FXMLLoader.load(Objects.requireNonNull(Main.class.getResource(fxml)));
             stage.setScene(new Scene(root));
         }catch (Exception e) {
             e.printStackTrace();
@@ -52,44 +56,14 @@ public class Main extends Application{
     }
 
 
-
-
-
-    //--module-path "C:\Program Files\Java\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml
-    public static void main(String[] args){
+    public static void main(String[] args) throws Exception {
         Application.launch(args);
+        DBUtil dbUtil = new DBUtil();
+        Connection conn = dbUtil.getConnection();
+        ResultSet resultSet =conn.createStatement().executeQuery("SELECT * FROM t_book");
+        while (resultSet.next()){
+            System.out.println(resultSet.getString(1));
+        }
+
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
